hid overflow to ensure phones display corrctly if content is messed up

--- a/src/index.scss
+++ b/src/index.scss
@@ -27,6 +27,7 @@ html {
   font-size: 0px;
   background-color: $grey-light;
   color: $white-medium;
+  overflow: hide;
 }
 body { margin: 0px; }
 p {
